Update all 7 AgentFlow processors with Foundatation best practices
Apply enterprise NiFi flow best practices from the Foundatation configuration
blueprint across all custom processors:

- Add @EventDriven, @SupportsBatching, @SeeAlso, @SideEffectFree annotations
- Add @OnScheduled/@OnStopped lifecycle methods with metrics tracking
- Add connection/socket timeout properties for I/O-bound processors
- Add error_stage attributes for consistent error routing
- Add provenance reporting for audit trail
- Add latency tracking and cumulative token budget management
- Use putAllAttributes for batched attribute updates
- Use Java 21 patterns (List.of, Set.of, switch expressions)
- Add comprehensive Javadoc with best practice guidance
- Fix TODOs: plan parsing, timeout parsing, penalize+rollback pattern
- Add max-tool-calls, max-subtasks, max-token-budget safety limits

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>